force-app/main/default/objects/Terminal_Checkout__c/Terminal_Checkout__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>It is for the terminal payment of Square</description>
    <label>Terminal Checkout</label>
</CustomObject>