force-app/main/default/objects/Terminal_Checkout__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Check if the device is active or not!</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>