force-app/main/default/objects/Terminal_Checkout__c/fields/Mode_of_other_Payments__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_other_Payments__c</fullName>
    <description>Mode of other Payments</description>
    <inlineHelpText>Mode of other Payments</inlineHelpText>
    <label>Mode of other Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>