force-app/main/default/objects/Terminal_Checkout__c/fields/Terminal_Id__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Id__c</fullName>
    <label>Terminal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>