force-app/main/default/objects/Terminal_Checkout__c/fields/TimeOut_In_minutes__c.field-meta.xml
<CustomField>
    <fullName>TimeOut_In_minutes__c</fullName>
    <label>TimeOut (In minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>